# omniglot-bazel-starter

./: .bazelignore  .bazeliskrc  .bazelrc  .clang-format  .clang-tidy  .gitignore  .mypy.ini  .pmd.xml  .pre-commit-config.yaml  .publish.toml  .ruff.toml  .rustfmt.toml  .spotbugs-exclude.xml  AGENTS.md  BUILD  CLAUDE.md  CONTRIBUTING.md  LICENSE  MODULE.bazel  README.md  bazel_downloader.cfg  go.mod  go.sum  renovate.json  user.bazelrc.template
.claude/: settings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/bazel_test/: action.yml
.github/actions/setup_linux/: action.yml
.github/actions/setup_macos/: action.yml
.github/actions/setup_windows/: action.yml
.github/workflows/: ci.yml  integration.yml
docs/: profiling-feature-design.md  profiling-rust-pilot-plan.md
modules/c_library/: BUILD
modules/c_library/include/: c_library.h
modules/c_library/src/: c_library.c
modules/cpp_app/: BUILD
modules/cpp_app/src/: main.cpp
modules/cpp_app_with_cmake_dep/: BUILD  README.md  fmt.MODULE.bazel
modules/cpp_app_with_cmake_dep/src/: main.cpp
modules/cpp_app_with_ext_dep/: BUILD  README.md
modules/cpp_app_with_ext_dep/src/: main.cpp
modules/cpp_library/: BUILD
modules/cpp_library/include/: cpp_library.h
modules/cpp_library/src/: cpp_library.cpp
modules/cpp_library/tests/: test_cpp_lib_tests.cpp
modules/cpp_py_bootstrap_app/: BUILD  README.md  python_interpreter_path_header.bzl
modules/cpp_py_bootstrap_app/include/: embedded_python_runtime.h  gil_release_guard.h  py_arg.h  py_object_guard.h  py_result_converter.h  python_lib_resolver.h  python_toolchain_resolver.h  sub_interpreter_guard.h
modules/cpp_py_bootstrap_app/src/: embedded_python_runtime.cpp  main.cpp  python_lib_resolver.cpp  python_toolchain_resolver.cpp
modules/cpp_py_bootstrap_app/tests/: call_in_subinterpreter_test.cpp  py_object_guard_test.cpp  py_result_converter_test.cpp  python_lib_resolver_test.cpp  python_test_main.cpp  python_toolchain_resolver_test.cpp  sub_interpreter_guard_test.cpp  test_utils.h
modules/cpp_py_ext_module/: BUILD  README.md
modules/cpp_py_ext_module/src/: cpp_py_ext_module.cpp  cpp_py_ext_module_impl.pyi
modules/cpp_py_ext_module/tests/: test_cpp_py_ext_module.py
modules/cpp_workloads/: BUILD
modules/cpp_workloads/benches/: bench_matmul.cpp  bench_pointer_chase.cpp  bench_quicksort.cpp  prof_main.cpp
modules/cpp_workloads/include/: fragmentation.h  matmul.h  pointer_chase.h  quicksort.h  retained_growth.h  string_churn.h  workload_n.h
modules/cpp_workloads/mem/: mem_fragmentation.cpp  mem_retained_growth.cpp  mem_string_churn.cpp  prof_dump.cpp  prof_dump.h
modules/cpp_workloads/src/: fragmentation.cpp  matmul.cpp  pointer_chase.cpp  quicksort.cpp  retained_growth.cpp  string_churn.cpp
modules/cpp_workloads/tests/: workloads_test.cpp
modules/go_app/: BUILD
modules/go_app/src/: main.go
modules/go_app_with_cgo_dep/: BUILD
modules/go_app_with_cgo_dep/src/: cfuncs.go  main.go
modules/go_app_with_ext_dep/: BUILD  README.md
modules/go_app_with_ext_dep/src/: main.go
modules/go_lib/: BUILD
modules/go_lib/src/: test_go_lib.go
modules/go_lib/tests/: test_go_lib_tests.go
modules/go_workloads/: BUILD
modules/go_workloads/benches/: bench_matmul_test.go  bench_pointer_chase_test.go  bench_quicksort_test.go
modules/java_app/: BUILD
modules/java_app_with_ext_dep/: BUILD
modules/java_lib/: BUILD
modules/java_workloads/: BUILD
modules/python_app/: BUILD
modules/python_app_with_ext_dep/: BUILD  README.md
modules/python_lib/: BUILD  README.md
modules/python_workloads/: BUILD
modules/rust_app/: BUILD
modules/rust_app_with_ext_dep/: BUILD  README.md
modules/rust_lib/: BUILD
modules/rust_workloads/: BUILD
tools/bootstrap/: AGENTS.md  BUILD  README.md  bootstrap_manifest.toml
tools/coverage/: BUILD  coverage_segment.MODULE.bazel  lcov.BUILD.bazel  report.sh
tools/coverage/tests/: BUILD  render_smoke_test.sh
tools/coverage/tests/testdata/: sample.lcov
tools/cpp/: cpp_3rd_party_dependencies.MODULE.bazel  cpp_segment.MODULE.bazel  llvm_segment.MODULE.bazel
tools/cpp/patches/: BUILD  toolchains_llvm_drop_redundant_stdlib_libcxx.patch
tools/cpp/toolchains/: BUILD  README.md  host_cc_discovery.bzl  remote_cc_toolchains.bzl  toolchain_config.bzl
tools/format/: BUILD
tools/go/: BUILD  go_segment.MODULE.bazel
tools/go/toolchains/: host_go_discovery.bzl  host_go_sdk_setup.sh  local_go_sdk.bzl
tools/java/: java_segment.MODULE.bazel  maven_install.json  package_defs.bzl
tools/java/testing/: java_test_suite.bzl  junit5_support.bzl
tools/java/toolchains/: README.md  host_jdk_discovery.bzl  local_corretto_toolchains.bzl  local_corretto_toolchains_setup.ps1  local_corretto_toolchains_setup.sh  remote_corretto_toolchains.bzl
tools/lint/: BUILD  README.md  clippy_assert_empty.sh  linters.bzl
tools/profile/: BUILD
tools/publish/: BUILD  IMAGE_PUBLISH_SPEC.md  README.md  credential-helper  docker_login_helper.py  netrc_lib.sh  publish_artifact.sh  publish_config.bzl  publish_defs.bzl  publish_segment.MODULE.bazel  repackage_wheel.py
tools/publish/gazelle/: BUILD  config.go  generate.go  generate_test.go  kinds.go  lang.go
tools/publish/lang/: BUILD  generic_publish_defs.bzl  image_publish_defs.bzl  java_publish_defs.bzl  python_publish_defs.bzl
tools/publish/src/mint/: __main__.py  cli.py  config.py  engine.py  git.py  label.py  scope.py  version.py  worktree.py
tools/publish/tests/: BUILD  credential_helper_test.sh  publish_artifact_test.sh  test_docker_login_helper.py  test_repackage_wheel.py  testlib.sh
tools/publish/tests/mint/: BUILD  test_config.py  test_engine.py  test_git.py  test_label.py  test_scope.py  test_version.py  test_worktree.py
tools/python/: BUILD  python_segment.MODULE.bazel  requirements.in  requirements_lock.txt
tools/python/mypy/: BUILD  aspect.bzl
tools/python/toolchains/: host_python_discovery.bzl
tools/rust/: Cargo.toml  rust_segment.MODULE.bazel
tools/setup/: install_bazelisk.sh
(+117 files in other folders)
