# --- BEGIN lang:core ---
module(
    name = "omniglot-bazel-starter",
    version = "0.0.1",
    bazel_compatibility = [">=8.0.0"],
    repo_name = "omniglot-bazel-starter",
)

#
# platforms block (custom C++ toolchains dependency)
#
# Bazel Platforms houses all canonical constraint_setting()s, constraint_value()s
# and platform()s that are universally useful across languages and Bazel projects.
#
bazel_dep(name = "platforms", version = "1.1.0")

#
# bazel_skylib block (rules_lint dependency)
#
# Skylib is a library of Starlark functions for manipulating collections, file
# paths, and various other data types in the domain of Bazel build rules.
#
bazel_dep(name = "bazel_skylib", version = "1.9.0")

#
# rules_shell block
#
# This module contains the Bazel ruleset for shell scripts.
#
# Please find documentation here:
# https://github.com/bazelbuild/rules_shell/releases
#
bazel_dep(name = "rules_shell", version = "0.8.0")

#
# Install a prebuilt version of buildifier. Buildifier is a linter and autoformatter
# for starlark files.
# https://github.com/keith/buildifier-prebuilt/releases
#
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1.2", dev_dependency = True)

#
# aspect_rules_lint block
#
# This ruleset integrates linting and formatting as first-class concepts under Bazel.
# Used for Python (ruff), C++ (clang-tidy) and Java (pmd, spotbugs). Rust uses native
# rules_rust clippy instead (See //tools/lint:linters.bzl).
#
# Please find documentation here:
# https://github.com/aspect-build/rules_lint/releases
#
bazel_dep(name = "aspect_rules_lint", version = "2.7.2")
# --- END lang:core ---

# --- BEGIN feature:publish ---
#
# Publish infrastructure
#
include("//tools/publish:publish_segment.MODULE.bazel")
# --- END feature:publish ---

# --- BEGIN lang:python ---
#
# Python bazel modules shard
#
include("//tools/python:python_segment.MODULE.bazel")
# --- END lang:python ---

# --- BEGIN lang:cpp,java ---
#
# LLVM toolchain bazel modules shard which is shared by C++ (default C/C++
# toolchain) and Java (clang-format is the formatter for Java and C++).
#
include("//tools/cpp:llvm_segment.MODULE.bazel")
# --- END lang:cpp,java ---

# --- BEGIN lang:cpp ---
#
# C++ bazel modules shard
#
include("//tools/cpp:cpp_segment.MODULE.bazel")
include("//tools/cpp:cpp_3rd_party_dependencies.MODULE.bazel")
# --- END lang:cpp ---

# --- BEGIN exclude ---
# fmt source for the rules_foreign_cc example (//modules/cpp_app_with_cmake_dep).
# Gated out of bootstrap so a generated MODULE.bazel never includes a segment
# from an example module that ships only in this source repo.
include("//modules/cpp_app_with_cmake_dep:fmt.MODULE.bazel")
# --- END exclude ---

# --- BEGIN lang:rust ---
#
# Rust bazel modules shard
#
include("//tools/rust:rust_segment.MODULE.bazel")
# --- END lang:rust ---

# --- BEGIN lang:java ---
#
# Java bazel modules shard
#
include("//tools/java:java_segment.MODULE.bazel")
# --- END lang:java ---

# --- BEGIN lang:go ---
#
# Go bazel modules shard
#
include("//tools/go:go_segment.MODULE.bazel")
# --- END lang:go ---
