#
# toolchains_llvm block
#
# Hermetic LLVM toolchain for Bazel which is also dependent on by rules_lint.
#
# NOTE: Windows is NOT supported by toolchains_llvm (as of version 1.6.0).
# On Windows, Bazel uses the auto-configured MSVC toolchain from Visual Studio Build Tools.
# The LLVM toolchain below is used on Linux and macOS platforms only.
#
# Please find documentation here:
# https://github.com/bazel-contrib/toolchains_llvm/releases
#
bazel_dep(name = "toolchains_llvm", version = "1.8.0")

# TODO(toolchains_llvm#791): git_override pins the commit that drops the redundant
# -stdlib=libc++ (unused on compile -> -Wunused, fatal under -Werror; PR #791). It
# also carries the LLVM 22.1.8 checksums (PR #780) that the llvm_version above needs.
# Switch to a released version and drop the override once both ship in a release.
git_override(
    module_name = "toolchains_llvm",
    commit = "c3ac93f5c61cb78487765d2e81e7485ad3f8bf2c",
    remote = "https://github.com/bazel-contrib/toolchains_llvm.git",
)

# Configure and register the toolchain.
# This toolchain supports: Linux (x86_64, aarch64, armv7) and macOS (x86_64, aarch64).
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_version = "22.1.8",
)
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")

register_toolchains("@llvm_toolchain//:all")
