#
# rules_go block
#
# Go Rules for Bazel
#
# Please find documentation here:
# https://github.com/bazel-contrib/rules_go/releases
#
bazel_dep(name = "rules_go", version = "0.61.1")

# Gazelle is used to generate BUILD files and manage Go dependencies.
# Documentation: https://github.com/bazel-contrib/bazel-gazelle
bazel_dep(name = "gazelle", version = "0.51.3")

# All go sdk versions are available via dl here:
# https://go.dev/dl/
#
# Comprehensive Go toolchain documentation is available here:
# https://github.com/bazel-contrib/rules_go/blob/master/go/toolchains.rst#overview
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Remote SDK (will be used when local SDK is disabled or unavailable)
go_sdk.download(
    # Optionally, one can pass SDKs mapping to the download tag in order to
    # prevent calls to https://go.dev/dl/?mode=json&include=all or https://golang.google.cn/dl/?mode=json&include=all
    # which are problematic with Artifactory caching proxy. See _go_download_sdk_impl implementation here for details:
    #
    # https://github.com/bazel-contrib/rules_go/blob/master/go/private/sdk.bzl#L74
    #
    #sdks = {
    #    "darwin_amd64": ("go1.26.4.darwin-amd64.tar.gz", "b69d51bce599e5381a94ce15263ae644ec84667a5ce23d58dc2e63e2c12a9f56"),
    #    "darwin_arm64": ("go1.26.4.darwin-arm64.tar.gz", "bed8ebe824e3d3b27e8471d1307f803fc6ab8e1d0eb7a4ae196979bd9b801dd3"),
    #    "linux_amd64": ("go1.26.4.linux-amd64.tar.gz", "9e9b755d63b36acf30c12a9a3fc379243714c1c6d3dd72861da637f336ebb35b"),
    #    "linux_arm64": ("go1.26.4.linux-arm64.tar.gz", "b00b694903d126c588c378e72d3545549935d3982635ba3f7a964c9fa23fe3b9"),
    #    "windows_amd64": ("go1.26.4.windows-amd64.zip", "ae756cce1cb80c819b4fe01b0353807178f532211b47f72d7fa77949de054ebb"),
    #},
    #
    version = "1.26.4",
)

# --- BEGIN feature:lint ---
# nogo static analysis of Go code (part of the lint feature). More information on
# nogo can be found here:
# https://github.com/bazel-contrib/rules_go/blob/master/go/nogo.rst
go_sdk.nogo(
    excludes = ["@//generated:__subpackages__"],
    includes = ["@//:__subpackages__"],  # Labels to lint. By default only lints code in workspace.
    nogo = "//:omniglot-bazel-starter_nogo",
)
# --- END feature:lint ---

# --- BEGIN feature:custom_toolchains ---
#
# Local Go SDK (for development or custom builds)
#
# Custom extension creates the @go_local_sdk repository from a local path with
# complete toolchain definitions. When enabled and valid, toolchains have proper
# platform constraints. When disabled or invalid, toolchains have incompatible
# constraints, causing fallback to the remote SDK.
#
# SDK selection via environment variable (remote SDK is default):
#   USE_LOCAL_GO_SDK=0 (default) - use remote SDK (local SDK toolchain has incompatible constraints)
#   USE_LOCAL_GO_SDK=1 - enable local SDK (local SDK toolchain has proper constraints)
#
# Usage in .bazelrc:
#   build:go_local --repo_env=USE_LOCAL_GO_SDK=1
#
go_local_sdk_ext = use_extension("//tools/go/toolchains:local_go_sdk.bzl", "go_local_sdk_ext")
go_local_sdk_ext.define_local_sdk(
    name = "go_local_sdk",
    path = "/opt/go_sdk/go1.24.11",
    version = "1.24.11",
    # Optional: enable Go experiments via GOEXPERIMENT environment variable.
    # Available experiments: https://github.com/golang/go/blob/master/src/internal/goexperiment/flags.go
    # experiments = ["arenas"],
)
use_repo(go_local_sdk_ext, "go_local_sdk")

# Register local SDK toolchain, when SDK is disabled/invalid, the toolchain has incompatible constraints
# and won't match.
register_toolchains("@go_local_sdk//:all")
# --- END feature:custom_toolchains ---

#
# Go external dependencies
#
# External Go modules are managed via go.mod file in the project root and
# gazelle's go_deps extension.
#
# To add a new dependency (run from project root):
#   bazel run @rules_go//go -- get github.com/stretchr/testify@v1.10.0
#
# To update an existing dependency to a specific version:
#   bazel run @rules_go//go -- get github.com/stretchr/testify@v1.11.0
#
# To update all dependencies to their latest versions:
#   bazel run @rules_go//go -- get -u ./...
#
# To sync go.sum with go.mod (required when bootstrapping with empty go.sum):
#   bazel run @rules_go//go -- mod tidy
#
# These commands will automatically update go.mod, go.sum, and run 'bazel mod tidy'
# to update the use_repo() statements below.
# --- BEGIN feature:custom_toolchains ---
#
# By default, these commands use the remote SDK from rules_go. To use a custom
# toolchain (e.g., local SDK), pass the corresponding --config flag from .bazelrc:
#   bazel run --config=go_local_sdk @rules_go//go -- get github.com/some/pkg
# --- END feature:custom_toolchains ---
#
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_burntsushi_toml",
    "com_github_stretchr_testify",
)

# --- BEGIN feature:profiling ---
# pprof -> folded-stacks converter used by bazel run //tools/profile.
use_repo(go_deps, "com_github_felixge_pprofutils_v2")
# --- END feature:profiling ---

# --- BEGIN feature:profiling lang:cpp ---
# Symbolizing converter for gperftools' legacy profile format (C++ capture).
use_repo(go_deps, "com_github_google_pprof")
# --- END feature:profiling lang:cpp ---

# --- BEGIN exclude ---
use_repo(go_deps, "org_golang_x_net")
# --- END exclude ---
