#
# rules_go block
#
# Go Rules for Bazel
#
# Please find documentation here:
# https://github.com/bazel-contrib/rules_go/releases
#
bazel_dep(name = "rules_go", version = "0.61.1")

# Gazelle is used to generate BUILD files and manage Go dependencies.
# Documentation: https://github.com/bazel-contrib/bazel-gazelle
bazel_dep(name = "gazelle", version = "0.52.2")

# All go sdk versions are available via dl here:
# https://go.dev/dl/
#
# Comprehensive Go toolchain documentation is available here:
# https://github.com/bazel-contrib/rules_go/blob/master/go/toolchains.rst#overview
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Remote SDK (will be used when local SDK is disabled or unavailable)
go_sdk.download(
    # Optionally, one can pass SDKs mapping to the download tag in order to
    # prevent calls to https://go.dev/dl/?mode=json&include=all or https://golang.google.cn/dl/?mode=json&include=all
    # which are problematic with Artifactory caching proxy. See _go_download_sdk_impl implementation here for details:
    #
    # https://github.com/bazel-contrib/rules_go/blob/master/go/private/sdk.bzl#L74
    #
    #sdks = {
    #    "darwin_amd64": ("go1.26.5.darwin-amd64.tar.gz", "6231d8d3b8f5552ec6cbf6d685bdd5482e1e703214b120e89b3bf0d7bf1ef725"),
    #    "darwin_arm64": ("go1.26.5.darwin-arm64.tar.gz", "efb87ff28af9a188d0536ef5d42e63dd52ba8263cd7344a993cc48dd11dedb6a"),
    #    "linux_amd64": ("go1.26.5.linux-amd64.tar.gz", "5c2c3b16caefa1d968a94c1daca04a7ca301a496d9b086e17ad77bb81393f053"),
    #    "linux_arm64": ("go1.26.5.linux-arm64.tar.gz", "fe4789e92b1f33358680864bbe8704289e7bb5fc207d80623c308935bd696d49"),
    #    "windows_amd64": ("go1.26.5.windows-amd64.zip", "97e6b2a833b6d89f9ff17d25419ac0a7e3b482a044e9ab18cdef834bd834fd38"),
    #},
    #
    version = "1.26.5",
)

# --- BEGIN feature:lint ---
# nogo static analysis of Go code (part of the lint feature). More information on
# nogo can be found here:
# https://github.com/bazel-contrib/rules_go/blob/master/go/nogo.rst
go_sdk.nogo(
    excludes = ["@//generated:__subpackages__"],
    includes = ["@//:__subpackages__"],  # Labels to lint. By default only lints code in workspace.
    nogo = "//:omniglot-bazel-starter_nogo",
)
# --- END feature:lint ---

# --- BEGIN feature:custom_toolchains ---
#
# Host Go SDK (auto-discovered)
#
# The host_go_discovery extension (//tools/go/toolchains:host_go_discovery.bzl)
# enumerates candidate GOROOTs (GOROOT env, `go` on PATH, ~/.go_sdks/*,
# /opt/go_sdk/*, /usr/local/go, /usr/lib/go) and wires the newest valid SDK
# as the @host_go_sdk repository — no path or version is pinned here. Install
# SDKs with //tools/go/toolchains:host_go_sdk_setup.sh (default root ~/.go_sdks).
#
# SDK selection via environment variable (hermetic SDK is default):
#   USE_HOST_GO_SDK=0 (default) - the @host_go_sdk toolchain has incompatible
#     constraints and never matches, so the hermetic SDK is used
#   USE_HOST_GO_SDK=1 - discovery runs and the toolchain gets proper constraints
#
# Usage in .bazelrc:
#   build:go_host --repo_env=USE_HOST_GO_SDK=1
#
host_go_discovery = use_extension("//tools/go/toolchains:host_go_discovery.bzl", "host_go_discovery")
use_repo(host_go_discovery, "host_go_sdk")

# Register the host SDK toolchain; when discovery is disabled or finds nothing,
# the toolchain has incompatible constraints and won't match.
register_toolchains("@host_go_sdk//:all")
# --- END feature:custom_toolchains ---

#
# Go external dependencies
#
# External Go modules are managed via go.mod file in the project root and
# gazelle's go_deps extension.
#
# To add a new dependency (run from project root):
#   bazel run @rules_go//go -- get github.com/stretchr/testify@v1.10.0
#
# To update an existing dependency to a specific version:
#   bazel run @rules_go//go -- get github.com/stretchr/testify@v1.11.0
#
# To update all dependencies to their latest versions:
#   bazel run @rules_go//go -- get -u ./...
#
# To sync go.sum with go.mod (required when bootstrapping with empty go.sum):
#   bazel run @rules_go//go -- mod tidy
#
# These commands will automatically update go.mod, go.sum, and run 'bazel mod tidy'
# to update the use_repo() statements below.
# --- BEGIN feature:custom_toolchains ---
#
# By default, these commands use the remote SDK from rules_go. To use a custom
# toolchain (e.g., the discovered host SDK), pass the corresponding --config flag from .bazelrc:
#   bazel run --config=go_host @rules_go//go -- get github.com/some/pkg
# --- END feature:custom_toolchains ---
#
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_burntsushi_toml",
    "com_github_stretchr_testify",
)

# --- BEGIN feature:profiling ---
# pprof -> folded-stacks converter used by bazel run //tools/profile.
use_repo(go_deps, "com_github_felixge_pprofutils_v2")
# --- END feature:profiling ---

# --- BEGIN feature:profiling lang:cpp ---
# Symbolizing converter for gperftools' legacy profile format (C++ capture).
use_repo(go_deps, "com_github_google_pprof")
# --- END feature:profiling lang:cpp ---

# --- BEGIN exclude ---
use_repo(go_deps, "org_golang_x_net")
# --- END exclude ---
